re PR libstdc++/13007 (basic_streambuf::pubimbue, imbue wrong)

2004-01-07  Paolo Carlini  <pcarlini@suse.de>
	    Petur Runolfsson  <peturr02@ru.is>

	PR libstdc++/13007
	* include/bits/fstream.tcc (imbue): Don't touch the stored
	locale.
	* include/std/std_streambuf.h (imbue): According to the
	standard, base class version does nothing.
	(pubimbue): Store the locale.

Co-Authored-By: Petur Runolfsson <peturr02@ru.is>

From-SVN: r75502